migrated vehicle routing quickstart to model